# de-duke-project

./: .gitignore  AGENTS.md  docker-compose.yml
apps/backend/: .env.example  .firebaserc  Dockerfile  Dockerfile.dev  firestore.indexes.json  firestore.rules  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 231e83887366_initial_schema.py  a1b2c3d4e5f6_add_listing_inquiry_count.py  (+12 more)
apps/backend/app/: firestore_models.py  main.py
apps/backend/app/core/: db.py  (+7 more)
apps/backend/docker/: localstack-init-s3.sh  localstack-init-sqs.sh
apps/backend/scripts/: bootstrap_admin.py  seed_load_test_data.py  verify_no_double_booking.py
apps/backend/tests/: conftest.py  test_accept_invite.py  test_account_deletion.py  test_agency_service.py  test_analytics_dashboards.py  test_analytics_service.py  test_auth.py  test_booking_concurrency.py  test_cache.py  test_chat.py  test_checkout_idempotency.py  test_commission_service.py  test_dispute_service.py  test_email_service.py  test_embedding_service.py  test_geocoding_service.py  test_health.py  test_hold_expiry_pure.py  test_host_accounts.py  test_listing_embedding_worker.py  test_listing_response_time_worker.py  test_listing_schemas.py  test_listing_service.py  test_logging_config.py  test_moderation_api.py  test_moderation_service.py  test_payment_service.py  test_push_service.py  test_report_service.py  test_saved_search_alert_job.py  test_saved_searches_api.py  test_search.py  test_share_api.py  test_share_service.py  test_sms_service.py  test_staff_accounts.py  test_storage.py  test_support_service.py
(+440 files in other folders)
