[project]
name = "de-duke-backend"
version = "0.1.1"
description = "De-Duke Backend API Service -- FastAPI, async-first, per architecture.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlmodel>=0.0.22",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.13.3",
  "geoalchemy2>=0.16.0",
  "pgvector>=0.3.6",
  "pydantic[email]>=2.9",
  "pydantic-settings>=2.6",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt>=4.0,<4.1",  # passlib 1.7.4 is incompatible with bcrypt>=4.1 (missing __about__ attr)
  "httpx>=0.27",
  "redis>=5.1",
  "anyio>=4.14",
  "boto3>=1.35",
  "firebase-admin>=6.5",
  "sentry-sdk[fastapi]>=2.17",
  "python-multipart>=0.0.12",
  "reportlab>=5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "mypy>=1.13",
  "httpx>=0.27",
  "aiosqlite>=0.20",
  "fakeredis>=2.36",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # Depends(...) in argument defaults is the idiomatic FastAPI pattern

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true
mypy_path = "."
